--- a/app/src/main/res/layout/fragment_profile_view.xml
+++ b/app/src/main/res/layout/fragment_profile_view.xml
@@ -263,8 +263,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginRight="15dp"
             android:gravity="center_vertical"
-            android:padding="5dp"
-            android:text="@string/blood_type_a" />
+            android:padding="5dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
